Continued work on deCarmackization & map header loading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.5)
 
 project(vargsten3d LANGUAGES C)
 
-add_subdirectory(libvs3d)
-add_subdirectory(vs3d)
+add_subdirectory(vargsten)
+add_subdirectory(varg)
