Added game struct

--- a/varg/CMakeLists.txt
+++ b/varg/CMakeLists.txt
@@ -2,7 +2,7 @@ project(varg LANGUAGES C)
 
 find_package(SDL2 REQUIRED)
 
-add_executable(varg src/main.c src/wl6.h src/wl6.c)
+add_executable(varg src/main.c src/wl6.h src/wl6.c "src/wolf.h" "src/wolf.c")
 set_property(TARGET varg PROPERTY C_STANDARD 11)
 
 if(MSVC)
